# neonchats

./: .env.example  .gitignore  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_spend_controls.py  0003_experiment_engine.py  0004_mcp_gateway.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  analytics.py  approval.py  audit.py  base.py  campaign.py  connector.py  content.py  execution.py  experiment.py  tenant.py  user.py  voice.py
apps/api/app/routers/: analytics.py  approvals.py  audit.py  auth.py  campaigns.py  connectors.py  content.py  deps.py  executions.py  experiments.py  integrations.py  voice.py
apps/api/app/schemas/: __init__.py  analytics.py  approval.py  audit.py  auth.py  campaign.py  connector.py  content.py  execution.py  experiment.py  voice.py
apps/api/app/services/: audit.py  auth.py  content_generator.py  embeddings.py  execution.py  experiment.py  gateway.py  hubspot.py  policy.py  rag.py
apps/api/app/services/connectors/: base.py  google_ads.py  klaviyo.py  meta.py  sendgrid.py  webflow.py
apps/web/: Dockerfile  package.json  tailwind.config.ts  (+1 more)
references/: 01-project-overview.md  02-tech-stack.md  03-file-structure.md  04-api-reference.md  05-llm-providers.md  06-data-classification.md  07-getting-started.md  08-database-schema.md  09-what-to-build-next.md  10-phase-2-summary.md  11-phase-3-summary.md  12-api-keys-and-services.md
(+17 files in other folders)
